<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/servername"-->
<!--        android:textColor="?android:textColorSecondary"-->
<!--        android:textSize="@dimen/customTitle"/>-->

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mtf_labelColor="#666"
        app:mtf_image="@drawable/ic_server"
        >

        <EditText
            android:id="@+id/server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serverhint"
            android:textColor="#333"
            android:textSize="15sp" />

    </com.github.florent37.materialtextfield.MaterialTextField>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/mailaddress"-->
<!--        android:textColor="?android:textColorSecondary"-->
<!--        android:textSize="@dimen/customTitle"/>-->

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mtf_labelColor="#666"
        app:mtf_image="@drawable/ic_mail"
        >

        <EditText
            android:id="@+id/mail_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mailhint"
            android:textColor="#333"
            android:textSize="15sp" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mtf_labelColor="#666"
        app:mtf_image="@drawable/ic_password"
        >

        <EditText
            android:id="@+id/password"
            android:hint="@string/passwordhint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/customEntry"
            tools:ignore="Autofill,HardcodedText,LabelFor"
            />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <CheckBox
        android:id="@+id/showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/showPassword"
        android:textColor="#666"
        android:textSize="@dimen/customEntry"
        />

</LinearLayout>